Changed mime_generate_attachment_headers to pass both attachment charset and main body's charset, and use the main body's charset to encode attachment filename then fallback to system's default, bug 160801, r=ducarroz, sr=bienvenu.